--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,32 @@
 {
-  "extends": ["airbnb/base", "prettier"],
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": ["error"]
+  "extends": [
+      "airbnb",
+      "plugin:prettier/recommended",
+      "prettier/react"
+    ],
+    "env": {
+      "browser": true,
+      "commonjs": true,
+      "es6": true,
+      "jest": true,
+      "node": true
+    },
+    "rules": {
+      "jsx-a11y/href-no-hash": ["off"],
+      "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+      "max-len": [
+        "warn",
+        {
+          "code": (SET BY USER),
+          "tabWidth": 2,
+          "comments": (SET BY USER),
+          "ignoreComments": false,
+          "ignoreTrailingComments": true,
+          "ignoreUrls": true,
+          "ignoreStrings": true,
+          "ignoreTemplateLiterals": true,
+          "ignoreRegExpLiterals": true
+        }
+      ]
+    }
   }
-}
